testTask: almost done