@@ -1,4 +1,4 @@
-package shift.sellersandtransactions.core.exception;
+package shift.sellersandtransactions.api.error;
 
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.servlet.http.HttpServletRequest;
@@ -14,14 +14,13 @@ import java.time.LocalDateTime;
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
-    // 1. Ошибки валидации (@Valid из DTO) - Возвращает 400 Bad Request
     @ExceptionHandler(MethodArgumentNotValidException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     public ErrorResponseDto handleValidationException(
             MethodArgumentNotValidException ex,
             HttpServletRequest request
     ) {
-        String message = ex.getBindingResult().getAllErrors().get(0).getDefaultMessage();
+        String message = ex.getBindingResult().getAllErrors().getFirst().getDefaultMessage();
         return new ErrorResponseDto(
                 LocalDateTime.now(),
                 HttpStatus.BAD_REQUEST.value(),
@@ -31,7 +30,6 @@ public class GlobalExceptionHandler {
         );
     }
 
-    // 2. Ресурс не найден (когда мы бросаем EntityNotFoundException) - Возвращает 404 Not Found
     @ExceptionHandler(EntityNotFoundException.class)
     @ResponseStatus(HttpStatus.NOT_FOUND)
     public ErrorResponseDto handleNotFoundException(
@@ -42,12 +40,11 @@ public class GlobalExceptionHandler {
                 LocalDateTime.now(),
                 HttpStatus.NOT_FOUND.value(),
                 HttpStatus.NOT_FOUND.getReasonPhrase(),
-                ex.getMessage(), // Сюда попадет текст "Продавец с id ... не найден"
+                ex.getMessage(),
                 request.getRequestURI()
         );
     }
 
-    // 3. Бизнес-ошибки (например, если мы бросим IllegalArgumentException) - Возвращает 400 Bad Request
     @ExceptionHandler(IllegalArgumentException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     public ErrorResponseDto handleIllegalArgumentException(
@@ -63,19 +60,17 @@ public class GlobalExceptionHandler {
         );
     }
 
-    // 4. Глобальный перехватчик "непредвиденных" ошибок (Ловит все остальное) - Возвращает 500 Internal Server Error
     @ExceptionHandler(Exception.class)
     @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
     public ErrorResponseDto handleGeneralException(
             Exception ex,
             HttpServletRequest request
     ) {
-        // В реальном проекте тут обычно пишут ошибку в лог: log.error("Unhandled exception", ex);
         return new ErrorResponseDto(
                 LocalDateTime.now(),
                 HttpStatus.INTERNAL_SERVER_ERROR.value(),
                 HttpStatus.INTERNAL_SERVER_ERROR.getReasonPhrase(),
-                "Внутренняя ошибка сервера. Обратитесь к администратору.",
+                "Внутренняя ошибка сервера",
                 request.getRequestURI()
         );
     }
