@@ -3,9 +3,10 @@ package shift.sellersandtransactions.core.service;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.TransactionException;
 import org.springframework.transaction.annotation.Transactional;
+import shift.sellersandtransactions.api.dto.AnalyticsPeriod;
 import shift.sellersandtransactions.api.dto.SellerResponseDto;
 import shift.sellersandtransactions.api.mapper.SellerMapper;
 import shift.sellersandtransactions.core.entity.TransactionEntity;
@@ -13,14 +14,16 @@ import shift.sellersandtransactions.core.repository.SellerRepository;
 import shift.sellersandtransactions.core.repository.TransactionRepository;
 
 import java.math.BigDecimal;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.LocalTime;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional(readOnly = true) // Аналитика ничего не меняет в базе, только читает
+@Transactional(readOnly = true)
 public class AnalyticsService {
 
     private final SellerRepository sellerRepository;
@@ -28,14 +31,11 @@ public class AnalyticsService {
     private final SellerService sellerService;
     private final SellerMapper sellerMapper;
 
-    /**
-     * Аналитика: Получить самого продуктивного продавца за период
-     */
-    public SellerResponseDto getBestSeller(String period) {
+
+    public SellerResponseDto getBestSeller(AnalyticsPeriod period) {
         LocalDateTime endDate = LocalDateTime.now();
         LocalDateTime startDate = calculateStartDate(period, endDate);
 
-        // Используем PageRequest.of(0, 1) вместо LIMIT 1
         var topSellers = transactionRepository.findBestSellerForPeriod(
                 startDate, endDate, PageRequest.of(0, 1)
         );
@@ -44,65 +44,39 @@ public class AnalyticsService {
             throw new EntityNotFoundException("За указанный период транзакций не найдено");
         }
 
-        return sellerMapper.toResponse(topSellers.get(0));
+        return sellerMapper.toResponse(topSellers.getFirst());
     }
 
-    /**
-     * Аналитика: Получить самое продуктивное время продавца (по сумме транзакций)
-     */
-    public String getBestTimeForSeller(Long sellerId) {
-        // 1. Проверяем, существует ли вообще такой продавец
-        sellerService.getSellerOrThrow(sellerId);
 
-        // 2. Достаем все его транзакции
-        List<TransactionEntity> transactions = transactionRepository.findAllBySellerId(sellerId);
-
-        if (transactions.isEmpty()) {
-            throw new EntityNotFoundException("У продавца пока нет транзакций");
-        }
-
-        // 3. Группируем транзакции по часам и суммируем их выручку
-        // Ключ: час (например, 14), Значение: общая сумма (например, 5000.00)
-        Map<Integer, BigDecimal> salesByHour = transactions.stream()
-                .collect(Collectors.toMap(
-                        t -> t.getTransactionDate().getHour(), // Берем только час из даты
-                        TransactionEntity::getAmount,                // Берем сумму
-                        BigDecimal::add                        // Если в один час было несколько транзакций - складываем их
-                ));
-
-        // 4. Находим час с максимальной суммой
-        int bestHour = salesByHour.entrySet().stream()
-                .max(Map.Entry.comparingByValue())
-                .map(Map.Entry::getKey)
-                .orElse(0);
-
-        // 5. Форматируем результат в красивую строку "HH:00 - HH:59"
-        return String.format("%02d:00 - %02d:59", bestHour, bestHour);
-    }
-
-    /**
-     * Аналитика: Получить список продавцов с суммой меньше указанной
-     */
     public List<SellerResponseDto> getSellersWithTotalSumLessThan(BigDecimal amount) {
         return sellerRepository.findSellersWithTotalTransactionsAmountLessThan(amount)
                 .stream()
                 .map(sellerMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // --- Вспомогательные методы ---
+    private LocalDateTime calculateStartDate(AnalyticsPeriod period, LocalDateTime endDate) {
+        return switch (period) {
+            case AnalyticsPeriod.DAY -> endDate.minusDays(1);
+            case AnalyticsPeriod.MONTH -> endDate.minusMonths(1);
+            case AnalyticsPeriod.QUARTER -> endDate.minusMonths(3);
+            case AnalyticsPeriod.YEAR -> endDate.minusYears(1);
+        };
+    }
 
-    /**
-     * Вычисляет начальную дату на основе переданного периода.
-     * Использует современный switch-expression из Java 14+.
-     */
-    private LocalDateTime calculateStartDate(String period, LocalDateTime endDate) {
-        return switch (period.toUpperCase()) {
-            case "DAY" -> endDate.minusDays(1);     // За последние 24 часа
-            case "MONTH" -> endDate.minusMonths(1); // За последний месяц
-            case "QUARTER" -> endDate.minusMonths(3); // За квартал (3 месяца)
-            case "YEAR" -> endDate.minusYears(1);   // За последний год
-            default -> throw new IllegalArgumentException("Неверный период. Используйте DAY, MONTH, QUARTER или YEAR");
+    public String calculateBestPeriod(Long sellerId, LocalDate startDate, LocalDate endDate, AnalyticsPeriod periodType) {
+
+        // Превращаем LocalDate в LocalDateTime (начало и конец дня), если в БД транзакции хранятся с часами и минутами
+        LocalDateTime start = startDate.atStartOfDay();
+        LocalDateTime end = endDate.atTime(LocalTime.MAX);
+
+        Pageable limitOne = PageRequest.of(0, 1);
+
+        return switch (periodType) {
+            case DAY -> transactionRepository.findBestDay(sellerId, start, end, limitOne);
+            case MONTH -> transactionRepository.findBestMonth(sellerId, start, end, limitOne);
+            case YEAR -> transactionRepository.findBestYear(sellerId, start, end, limitOne);
+            default -> throw new IllegalArgumentException("Выберите другой период (день, месяц, год)");
         };
     }
 }
